# helloAgent

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_chain.py
.antigravity/rules/: 04-long-term-prd.md  06-visual-arch.md
.cursor/rules/: 01-doc-test-sync.md  02-architecture.md  03-clean-env.md  05-closed-loop-testing.md
config/: settings.py
data/: sample.txt
docs/: graph TD.mmd  prd.md  technical_design.md  todo.md
src/: main.py
src/config/: settings.py
src/core/: chat.py  loader.py  memory.py  reranker.py
src/dao/: __init__.py  base.py  qdrant_dao.py
src/utils/: file_state.py  hash.py  logger.py  text.py
tests/: test_incremental.py  test_loader.py  test_logger.py  test_memory.py  test_multimodal.py
tools/: clearDB.py  test_duplicate.py
