[project]
name = "helloagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.16",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["core*", "utils*", "config*", "dao*"]



[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
