[project]
name = "helloagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.16",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "markdown>=3.10.2",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pillow-heif>=1.3.0",
    "prompt-toolkit>=3.0.52",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "unstructured>=0.22.23",
    "unstructured-inference>=1.6.10",
    "unstructured-pytesseract>=0.3.15",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["core*", "utils*", "config*", "dao*"]



[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
